--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizzeria Di Strada</title>
+    <title>Proyecto2</title>
     <link rel="Preload" href="CSS/Normalize.css" as="style" />
     <link rel="stylesheet" href="CSS/Normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
